base/2.service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-techtalk-service
  namespace: techtalk
spec:
  selector:
    app: nginx-techtalk
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      name: http
    - protocol: TCP
      port: 443
      name: https
