base/1.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-techtalk
  namespace: techtalk
  labels:
    app: nginx-techtalk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-techtalk
  template:
    metadata:
      labels:
        app: nginx-techtalk
    spec:
      containers:
      - name: nginx-techtalk
        image: registry.gitlab.com/leonardosimoura-pessoal/techtalk/meu-app:$BUILD_BUILDNUMBER
        ports:
        - containerPort: 80
        - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-techtalk-service
  namespace: techtalk
spec:
  selector:
    app: nginx-techtalk
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      name: http
    - protocol: TCP
      port: 443
      name: https
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: "nginx-techtalk-ingress"
  namespace: techtalk
spec:
  rules:
    - host: techtalk.glicemic.com.br
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: "nginx-techtalk-service"
              port:
                number: 80
  tls:
  - hosts:
    - techtalk.glicemic.com.br
    secretName: techtalk-cert
