base/3.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: "nginx-techtalk-ingress"
  namespace: techtalk
spec:
  rules:
    - host: techtalk.glicemic.com.br
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: "nginx-techtalk-service"
              port:
                number: 80
  tls:
  - hosts:
    - techtalk.glicemic.com.br
    secretName: techtalk-cert
